Fixed Wrapping Issue

--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ div.time {
 #panelicons:before {
 	content: "Contact Me: ";
 	position: absolute;
-	width: 68px;
+	width: 70px;
 	right: 35px;}
 #panelicons {
 	height: 28px;
